After Creating the Serverless DB for storing the USERS

--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -44,8 +44,20 @@
         </div>
 
         <div class="form-group">
-            <label for="password">CON:</label>
-            <input type="password" class="form-control" id="password" name="CON" required>
+            <label for="Connectio-string">CONNECTION STRING 1:</label>
+            <input type="text" class="form-control" id="password" name="CON1" required>
+          </div>
+          <div class="form-group">
+            <label for="Connectio-string">CONNECTION STRING 2:</label>
+            <input type="text" class="form-control" id="password" name="CON2" required>
+          </div>
+          <div class="form-group">
+            <label for="Connectio-string">CONNECTION STRING 3:</label>
+            <input type="text" class="form-control" id="password" name="CON3" required>
+          </div>
+          <div class="form-group">
+            <label for="Connectio-string">CONNECTION STRING 4:</label>
+            <input type="text" class="form-control" id="password" name="CON4" required>
           </div>
 
         <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
